--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "wxmp-rsa",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "兼容微信小程序的rsa加解密库，支持超长文本和中文字符",
   "author": "neohan",
-  "main": "dist/index.js",
+  "main": "dist/index.min.js",
   "scripts": {
     "uglify": "uglifyjs src/index.js -c -m -o dist/index.min.js"
   },
